# llm-brain

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GUARDRAILS.md  Makefile  README.md  RESEARCH.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
.kimi/: BRAIN_CONFIG.json
.kimi/skill/brain/: SKILL.md
examples/: basic_usage.py  interactive_brain.py
scripts/: bootstrap.py
src/llm_brain/: __init__.py
src/llm_brain/api/: __init__.py  brain_api.py
src/llm_brain/core/: __init__.py  config.py  database.py  schema.sql
src/llm_brain/graph/: __init__.py  kuzu_graph.py  simple_graph.py
src/llm_brain/hooks/: __init__.py  cli_wrapper.py  decorators.py
src/llm_brain/memory/: __init__.py  models.py  storage.py  tiers.py
src/llm_brain/utils/: __init__.py  hashing.py  logging.py
src/llm_brain/web/: __init__.py  server.py
src/llm_brain/web/templates/: dashboard.html
tests/: __init__.py  test_basic.py
