[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-brain"
version = "0.1.0"
description = "Zero-translation persistent memory system for LLMs with hierarchical memory architecture"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sqlite-vec>=0.1.0",
    "kuzu>=0.6.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.0.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/saschametz/llm-brain"
Repository = "https://github.com/saschametz/llm-brain"

[project.scripts]
llm-brain-dashboard = "llm_brain.web.server:run_dashboard"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_brain = ["py.typed", "core/schema.sql", "web/templates/*", "web/static/*"]

# =============================================================================
# RUFF: Ultra-fast Python linter & formatter (replaces Black, Flake8, isort)
# https://docs.astral.sh/ruff/
# =============================================================================
[tool.ruff]
target-version = "py39"  # Match requires-python
line-length = 100
indent-width = 4
exclude = [
    ".git",
    ".github",
    ".kimi",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable all strict rule categories
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "PERF",   # Perflint
    "RUF",    # Ruff-specific rules
    "C90",    # mccabe complexity
    "S",      # flake8-bandit (security)
    "ASYNC",  # flake8-async
    "TCH",    # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "INT",    # flake8-gettext
]

ignore = [
    "D100",   # Missing docstring in public module (too strict for __init__.py)
    "D104",   # Missing docstring in public package
    "S101",   # Use of assert detected (pytest uses asserts)
    "PLR2004",# Magic value used in comparison (too strict)
    "PLR0913",# Too many arguments (sometimes necessary)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 8
max-statements = 60

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["llm_brain"]

# =============================================================================
# MYPY: Static type checker (like TypeScript)
# https://mypy.readthedocs.io/
# =============================================================================
[tool.mypy]
python_version = "3.9"
strict = true
exclude = [
    ".kimi",
    "tests",
    "scripts",
]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true

# Ignore missing imports for packages without type stubs
[[tool.mypy.overrides]]
module = [
    "sqlite_vec.*",
    "kuzu.*",
    "numpy.*",
]
ignore_missing_imports = true

# =============================================================================
# PYTEST + COVERAGE: Testing with coverage reporting
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/llm_brain"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
fail_under = 80  # Minimum coverage threshold
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
